# compute_shader_sandsim

./: Cargo.toml  build.rs
compute_shaders/: color.glsl  dirs.glsl  fall_empty.glsl  includes.glsl
shaders/: quad_vert.glsl
src/: camera.rs  gui.rs  main.rs  matter.rs  particle_simulator.rs  quad_pipeline.rs  render.rs  utils.rs  vertex.rs
