[package]
name = "particle_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Cargo.toml

[dependencies]
# For using Vulkano with Bevy
bevy_vulkano = { version = "0.6.0", features = ["gui"] }
# For implementing custom Vertex types with Vulkano
bytemuck = "1.9.1"
# For creating our graphics / compute pipelines and rendering
vulkano = "0.30.0"
# For compiling shaders to be used with Vulkano
vulkano-shaders = "0.30.0"
# Vulkano Utilities
vulkano-util = "0.30.0"
# line drawing dependencie
line_drawing = "1.0.0"
# Cargo.toml
strum_macros = "0.24.0"
strum = "0.24.0"

# Bevy Game framework without default features
[dependencies.bevy]
version = "0.8.0"
default-features = false
features = []

# For optimization (at the cost of build time)

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
